--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -16,3 +16,6 @@
     console.log('Custom JavaScript loaded');
   });
 </script>
+
+<!-- Security Accordion JavaScript -->
+<script src="{{ '/assets/js/security-accordion.js' | relative_url }}"></script>
