--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -4,6 +4,7 @@
 
 <!-- Custom favicon -->
 <link rel="icon" href="{{ '/assets/images/favicon.ico' | relative_url }}" type="image/x-icon">
+<link rel="shortcut icon" href="{{ '/assets/images/favicon.ico' | relative_url }}" type="image/x-icon">
 
 <!-- Custom meta tags -->
 <meta name="author" content="Cloudvisor">
